apps/pod-info/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-info
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-info
  template:
    metadata:
      labels:
        app: pod-info
        app.kubernetes.io/name: pod-info
    spec:
      containers:
      - name: pod-info
        image: stefanprodan/podinfo:6.11.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9898
