apps/pod-info/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info
spec:
  selector:
    app: pod-info
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9898
