apps/pod-info/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pod-info
spec:
  ingressClassName: nginx
  rules:
  - host: pod-info.local.tecno-fly.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pod-info
            port:
              number: 80
  tls:
  - hosts:
    - pod-info.local.tecno-fly.com
    secretName: pod-info-tls
