apps/pod-info/resources/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-info
spec:
  podSelector:
    matchLabels:
      app: pod-info
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: cert-manager
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cloudflare
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          name: pod-info
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: cert-manager
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cloudflare
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          name: pod-info
